--- a/DokiTCG/DokiTCGTest/DokiTCGTest.csproj
+++ b/DokiTCG/DokiTCGTest/DokiTCGTest.csproj
@@ -52,6 +52,9 @@
   <ItemGroup>
     <Compile Include="IRCTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server\Messages\AbstractMessage.cs" />
+    <Compile Include="Server\Messages\IMessage.cs" />
+    <Compile Include="Server\Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DokiTCGAgent\DokiTCGIRC.csproj">
@@ -59,6 +62,7 @@
       <Name>DokiTCGIRC</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
