Start on test server.
- Test server receives one message.
- Test server can send messages.
- IMessage.cs modified to generate uniform IRC messages.
- AbstractMessage.cs modified to generate uniform IRC messages.

--- a/DokiTCG/DokiTCGTest/DokiTCGTest.csproj
+++ b/DokiTCG/DokiTCGTest/DokiTCGTest.csproj
@@ -62,7 +62,9 @@
       <Name>DokiTCGIRC</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Resources\debug.txt" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
